--- a/resources/js/components/Navi/styles.module.css
+++ b/resources/js/components/Navi/styles.module.css
@@ -1,127 +1,34 @@
-.root {
-    top: 0;
-    height: 100%;
-}
-
-.wrapper {
+.navbar {
+    width: rem(56px);
+    height: rem(750px);
     display: flex;
-}
-
-.aside {
-    z-index: 100;
-    flex: 0 0 56px;
-    background-color: light-dark(
-        var(--mantine-color-gray-0),
-        var(--mantine-color-dark-6)
-    );
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    padding-bottom: var(--mantine-spacing-md);
-    border-right: 1px solid
-        light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-7));
-}
-
-.main {
-    display: flex;
     flex-direction: column;
-    padding-bottom: var(--mantine-spacing-md);
+    border-right: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+  }
+  
+  .navbarMain {
     flex: 1;
-    width: 240px;
-    background-color: light-dark(
-        var(--mantine-color-gray-0),
-        var(--mantine-color-dark-6)
-    );
-    position: absolute;
-    left: 56px;
-    border-right: 1px solid
-        light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-7));
-    height: 100%;
-}
-
-.naviOpen {
-    border-right: 0px;
-}
-
-.mainLinks {
-    flex: 1;
-}
-
-.mainLink {
-    width: 41px;
-    height: 41px;
+  }
+  
+  .link {
+    width: rem(50px);
+    height: rem(50px);
     border-radius: var(--mantine-radius-md);
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
     color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
-}
-
-.mainLinkActive {
-    background-color: var(--mantine-color-blue-6-light);
-    color: var(--mantine-color-blue-6);
-}
-
-.mainLinkOpenActive {
-    &::after {
-        content: "";
-        position: absolute;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        width: 15px;
-        transform: translateX(8px);
-        background-color: var(--mantine-color-blue-6-light);
+  
+    &:hover {
+      background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-5));
     }
-}
-
-.title {
-    box-sizing: border-box;
-    font-family: Greycliff CF, var(--mantine-font-family);
-    margin-bottom: var(--mantine-spacing-xs);
-    background-color: light-dark(
-        var(--mantine-color-gray-0),
-        var(--mantine-color-dark-6)
-    );
-    padding: var(--mantine-spacing-md);
-    padding-top: 18px;
-    height: 56px;
-    border-bottom: 1px solid
-        light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-7));
-}
-
-.burger {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: var(--mantine-spacing-xs);
-    background-color: light-dark(
-        var(--mantine-color-gray-0),
-        var(--mantine-color-dark-6)
-    );
-    height: 56px;
-    width: 100%;
-    border-bottom: 1px solid
-        light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-7));
-}
-
-.link {
-    box-sizing: border-box;
-    display: block;
-    text-decoration: none;
-    border-top-right-radius: var(--mantine-radius-md);
-    border-bottom-right-radius: var(--mantine-radius-md);
-    color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
-    padding: 0 var(--mantine-spacing-md);
-    font-size: var(--mantine-font-size-sm);
-    margin-right: var(--mantine-spacing-md);
-    font-weight: 500;
-    height: 41px;
-    line-height: 41px;
-}
-
-.linkActive {
-    background-color: var(--mantine-color-blue-6-light);
-    color: var(--mantine-color-blue-6);
-}
+  
+    &[data-active] {
+      &,
+      &:hover {
+        background-color: var(--mantine-color-blue-light);
+        color: var(--mantine-color-blue-light-color);
+      }
+    }
+  }
